--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
         "cli": "bun src/cli.ts",
         "dev:cli": "bun --watch src/cli.ts"
     },
-    "dependencies": {},
+    "dependencies": {
+        "hono": "^4.9.4",
+        "octokit": "^5.0.3",
+        "pino": "^9.9.0",
+        "pino-pretty": "^13.1.1",
+        "zod": "^4.1.3"
+    },
     "devDependencies": {
         "@biomejs/biome": "^2.2.2",
         "@commitlint/cli": "^19.8.1",
