--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@commitlint/config-conventional": "^19.8.1",
         "@types/bun": "^1.2.20",
         "lefthook": "^1.12.3",
+        "reflect-metadata": "^0.2.2",
         "typescript": "^5.9.2"
     },
     "peerDependencies": {}
