--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     },
     "dependencies": {
         "hono": "^4.9.4",
+        "inflection": "^3.0.2",
         "octokit": "^5.0.3",
         "pino": "^9.9.0",
         "pino-pretty": "^13.1.1",
         "reflect-metadata": "^0.2.2",
         "safe-stable-stringify": "^2.5.0",
+        "sqlite3": "^5.1.7",
         "tsyringe": "^4.10.0",
+        "typeorm": "^0.3.26",
+        "typeorm-pino-logger": "^0.1.0",
         "zod": "^4.1.3"
     },
     "devDependencies": {
