--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
+        // Decorators
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "strictPropertyInitialization": false,
+
         // Environment setup & latest features
         "lib": ["ESNext"],
         "target": "ESNext",
